fix: z-index

--- a/src/components/Main Header/Drop Down Menu/DropDownMenu.module.css
+++ b/src/components/Main Header/Drop Down Menu/DropDownMenu.module.css
@@ -1,5 +1,5 @@
 .dropdown {
-  z-index: 9;
+  z-index: 100;
   position: fixed;
   right: 0;
   box-sizing: border-box;
