--- a/src/components/Main/Levels General/MainLevel.module.css
+++ b/src/components/Main/Levels General/MainLevel.module.css
@@ -27,5 +27,5 @@
   position: absolute;
   left: 0;
   right: 0;
-  z-index: 100;
+  z-index: 1;
 }
