--- a/src/components/UI/Alert/Alert.module.css
+++ b/src/components/UI/Alert/Alert.module.css
@@ -1,5 +1,5 @@
 .alert {
-  z-index: 10;
+  z-index: 1000;
   position: fixed;
   width: auto;
   max-width: 90%;
