--- a/src/components/UI/Back To Top Button/BackToTop.module.css
+++ b/src/components/UI/Back To Top Button/BackToTop.module.css
@@ -3,7 +3,7 @@
   border-radius: 50%;
   padding: 1rem;
   position: fixed;
-  z-index: 10;
+  z-index: 100;
   cursor: pointer;
   background-color: white;
   right: 1vw;
