--- a/src/components/User/Badges/Tiny Badage/TinyBadge.module.css
+++ b/src/components/User/Badges/Tiny Badage/TinyBadge.module.css
@@ -3,4 +3,11 @@
   border-radius: 50%;
   cursor: pointer;
   font-weight: 800;
+  margin: 1px;
+}
+
+@media (width <= 320px) {
+  .badge {
+    transform: scale(0.9);
+  }
 }
